# picokeys-config-gui

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: auto-release.yml  release.yml
docs/: HSM-教學指南.md
src/: App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: device_manager.rs  error.rs  lib.rs  main.rs  types.rs
src-tauri/src/commands/: device.rs  fido.rs  hsm.rs  mod.rs
src-tauri/src/fido/: cbor.rs  mod.rs  types.rs
src-tauri/src/hsm/: apdu.rs  mod.rs  types.rs
src/api/: device.ts  errors.ts  fido.ts  hsm.ts  index.ts
src/components/: ConfirmDialog.tsx  DeviceSelector.tsx  LoadingIndicator.tsx  Notification.tsx
src/i18n/: en.ts  index.ts  types.ts  zh-CN.ts  zh-TW.ts
src/pages/fido/: FidoBackup.tsx  FidoConfig.tsx  FidoCredentials.tsx  FidoInfo.tsx  FidoOath.tsx  FidoPin.tsx
src/pages/hsm/: HsmBackup.tsx  HsmCerts.tsx  HsmConfig.tsx  HsmInfo.tsx  HsmInit.tsx  HsmKeys.tsx  HsmPin.tsx
src/store/: deviceStore.ts  fidoStore.ts  hsmStore.ts
src/styles/: common.ts
