[package]
name = "pico-config-gui"
version = "0.1.0"
edition = "2021"
description = "A Tauri 2.0 desktop app for managing Pico-FIDO and Pico-HSM devices"

[lib]
name = "pico_config_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_cbor = "0.11"
thiserror = "1"
hidapi = "2"
pcsc = "2"
